# rk2206-openharmony-medicalbox

./: BUILD.gn  medical_box_main.c
include/: box_event.h  drv_sensors.h  iot1.h  lcd_display.h  lcd_font.h  medical_box.h  ntp.h  picture.h  su_03.h
src/: adc_key.c  box_event.c  drv_sensors.c  iot1.c  lcd.c  lcd_display.c  medical_box.c  ntp.c  picture.c  su_03.c
